refactor: update code style
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>